--- a/index.html
+++ b/index.html
@@ -8992,7 +8992,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[שיח קפה]] 420 [[האחיות כהן]]" title="$:/StoryList">
+<div list="420 [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9158,12 +9158,12 @@ Error message and password prompt
 .tootdiv a:hover {text-decoration: none; color: #f88}
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
-<div created="20180802192842799" modified="20180802200044943" tags="[[כאן בגטו]]" title="420">
+<div created="20180802192842799" modified="20180802201110090" tags="[[כאן בגטו]]" title="420">
 <pre>[img[pictures/420.jpg]]
 
 !!![[תומר]]:
 
-[[תדר הראסטה|https://www.rastafrequency.co.il/420-shop-tel-aviv/]] זה מה שמדבר, ו-420 היא החנות הקטנה והמטריפה של המותג. היא נמצאת בקינג-ג'ורג' 30 על בורוכוב 2, והיא חלק ממכלול של עשייה שהאנשים האלה עושים. יש שם טבק ואביזרי עישון אבל גם מיני חפיצים, ואני תמיד אוהב לקנות שם איזו שרשרת עץ צבעונית של אפריקה או איזה ארנק נחמד [[לפרח|גן-יה]], או דבר מה יפה אחר, ולדבר עם המוכר.</pre>
+[[תדר הראסטה|https://www.rastafrequency.co.il/420-shop-tel-aviv/]] זה מה שמדבר, ו-420 היא החנות הקטנה והמטריפה של המותג. היא נמצאת בקינג-ג'ורג' 30 על בורוכוב 2, והיא חלק ממכלול של עשייה של האנשים האלה, שאני מאד מחבב. יש שם טבק ואביזרי עישון אבל גם מיני חפיצים, ואני תמיד אוהב לקנות שם איזו שרשרת עץ צבעונית של אפריקה או איזה ארנק נחמד [[לפרח|גן-יה]], או דבר מה יפה אחר, ולדבר עם המוכר.</pre>
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
