--- a/index.html
+++ b/index.html
@@ -603,6 +603,8 @@ Error message and password prompt
 
 <li>חבל&quot;ז שוכ&quot;ו ק&quot;ר</li>
 
+<li>חבר</li>
+
 <li>חוה אלברשטיין</li>
 
 <li>חומרים</li>
@@ -8980,11 +8982,11 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180725160000033" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20180815065115578" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20180802195107593" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20161023184705203" modified="20180815065114042" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -8992,7 +8994,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="420 [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מימי של אלפרד]] [[רן יגיל]] תומר חבר [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9012,7 +9014,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180720105043339" title="$:/temp/search">
+<div created="20161023184814872" modified="20180814104142312" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9212,7 +9214,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
 </div>
-<div created="20171004154734427" modified="20180709105349125" tags="[[אחיות חוץ]] מוזיקה" title="jazz">
+<div created="20171004154734427" modified="20180814110740442" tags="[[אחיות חוץ]] מוזיקה חבר" title="jazz">
 <pre>[img[pictures/jazz.jpg]]
 
 [[jazz|https://karolina.bandcamp.com/album/karolina-with-echo-jazz-light-remixes-free-download]] היא [[יסמין לסלרוט|https://www.youtube.com/watch?v=DUX9yPz-kvo]], והיא איתן טבע. היא [[לוחמת|https://www.youtube.com/watch?v=4Th-LcHpg2w]] של שלום וחופש,  והיא [[הכי שיש|https://www.youtube.com/watch?v=7p9f8fK1VHA&amp;feature=youtu.be]] ושאפשר אהבה.
@@ -9809,7 +9811,7 @@ well,
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20170423214419764" modified="20180201220243556" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]]" title="אחות כהן">
+<div created="20170423214419764" modified="20180814110815597" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]] חבר" title="אחות כהן">
 <pre>[img[pictures/achot-coen.jpg]]
 
 [[שלום ואהבה|imagine]].
@@ -9835,7 +9837,7 @@ well,
 
 כששואלים אחות כהן איזה חיה היא - היא מיד עונה - חתול.</pre>
 </div>
-<div created="20170612182534470" modified="20170817160108761" tags="[[קופים ממונעים]]" title="אחיות לחושן">
+<div created="20170612182534470" modified="20180814110838111" tags="[[קופים ממונעים]] חבר" title="אחיות לחושן">
 <pre>[img[pictures/achayot-la-choshen.jpg]]
 
 !!![[יויו]]:
@@ -11461,7 +11463,7 @@ different tastes, but there were things we both love: family, work, people in al
 K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
-<div created="20180731155632659" modified="20180802195754219" tags="" title="האחיות בלות">
+<div created="20180731155632659" modified="20180814103422260" tags="" title="האחיות בלות">
 <pre>[img[pictures/bloot-sisters.jpg]]
 
 !!![[אווה]]:
@@ -12156,6 +12158,24 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </div>
 <div created="20180221193850741" modified="20180316181307672" tags="הצוות" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
 <pre>[img[pictures/chavlaz.jpg]]</pre>
+</div>
+<div created="20180814103316187" modified="20180815062600195" tags="" title="חבר">
+<pre>[img[pictures/friend.jpg]]
+
+
+
+
+!!![[יויו]]:
+
+חבר אוהב אותך למרות מה שאתה,
+חבר אוהב אותך גם כשאתה במצב, חבר אוהב אותך גם כשאתה מחופף, חבר אוהב אותך גם ביום שבת. 
+
+
+
+(את הציור גורה ציירה מתוך [[תמונה|https://3.bp.blogspot.com/-ofciR9wlEuQ/WqsF9UH5O2I/AAAAAAAAr4w/ZUUJCbtouXcVXwE3IR9xUPk_qWSdjKZmwCEwYBhgL/s1600/career%2Bgirls00002.png]] מהסרט הנהדר [[ילדות קריירה|https://www.imdb.com/title/tt0118818/]] של האחות [[מייק לי|https://www.imdb.com/name/nm0005139/?ref_=tt_ov_dr]])
+
+
+&lt;&lt;list-links filter:&quot;[tag[חבר]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20180328131528706" modified="20180429134323226" tags="[[אחיות חוץ]] מוזיקה" title="חוה אלברשטיין">
 <pre>[img[pictures/chava-alberstein.jpg]]
@@ -13829,7 +13849,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170728130049527" modified="20171029224349844" tags="[[חלומות שחלמנו]] [[אחות כהן]] [[סיפורים אמיתיים]]" title="מימי של אלפרד">
+<div created="20170728130049527" modified="20180815065501637" tags="[[חלומות שחלמנו]] [[אחות כהן]] [[סיפורים אמיתיים]] חבר" title="מימי של אלפרד">
 <pre>[img[pictures/mimi-shel-alfred.jpg]]
 
 !!![[יויו]]:
@@ -13978,7 +13998,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מצפה ראשית, או בקיצור, [[מִיצְפֶּרֶש|דיור מוגז]] (כמחווה למפעל [[מִיצְפְרֶש|מיצפרש]] המקומי), הוא הישוב [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
 </div>
-<div created="20170223175057546" modified="20170616144350803" title="מקלדת">
+<div created="20170223175057546" modified="20180814104137587" tags="חבר" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
 
 !!![[גורה]]:
@@ -16355,7 +16375,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170416222531534" modified="20170417183355211" tags="[[אחיות חוץ]]" title="רן יגיל">
+<div created="20170416222531534" modified="20180815065238709" tags="[[אחיות חוץ]] חבר" title="רן יגיל">
 <pre>[img[pictures/rani.jpg]]
 
 
@@ -16941,7 +16961,7 @@ Fapina''
 
 [[אנג'ליק]] המתוקה נראתה לי יפהפיה ברגע שראיתי אותה, אבל הייתי בטוח שיש לה עניינים עם [[אלפרד]], מה שהתברר כלא נכון לאחר שציננתי פוטנציאל להתלהבות מבעוד מועד. בתקופה שהיא נתפסה על [[הסופרנוס]] היא השפיעה על כולנו, ואת פרק הסיום ראינו יחד. ככה הזמן עבר עד שיומיים לפני הארוחה היא באה איתי לשוק ובדרך בגינה הרגשתי שבשל הרגע. אספתי אותה אלי כאביר, הבטתי בה, ראיתי את מבטה המחייך ונישקתי אותה ארוכות והיא אהובתי. </pre>
 </div>
-<div created="20170401223255295" modified="20180718170047852" tags="[[אחות כהן]]" title="תומר">
+<div created="20170401223255295" modified="20180815065144216" tags="[[אחות כהן]] חבר" title="תומר">
 <pre>[img[pictures/tomer.jpg]]
 
 !!![[יויו]]:
