--- a/index.html
+++ b/index.html
@@ -627,6 +627,8 @@ Error message and password prompt
 
 <li>חשיפה לצפון</li>
 
+<li>חשמל אבי</li>
+
 <li>טוני וספה</li>
 
 <li>טוני סופרנו</li>
@@ -8994,7 +8996,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חשמל אבי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9014,7 +9016,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180814104142312" title="$:/temp/search">
+<div created="20161023184814872" modified="20180816160713845" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12349,6 +12351,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[its not the thing you fling, its the fling itself|https://www.youtube.com/watch?v=V6zmMWfzv38]]                          (אחד מקטעי הוידאו הבודדים שנשארו ביוטיוב)</pre>
 </div>
+<div created="20180822175257734" modified="20180823134317531" tags="[[כאן בגטו]] [[מטא בדיון]]" title="חשמל אבי">
+<pre>[img[pictures/hashmal-avi.jpg]]
+
+!!![[תומר]]:
+
+אני יוצא מהבניין, משתדל לחצות את הכביש לפני הרמזור ועולה ליהודה הלוי, שם אני יורד ימינה ושוב משתדל לחצות את הכביש לפני הרמזור וממשיך לרדת. אני חוצה את מרמורק, עכשיו זה כבר אבן גבירול 1 ובאבן גבירול 5, שזה כמה חנויות קדימה, נמצאת -   //חשמל אבי// - שזה חשמלאי וחנות חשמל, בה נמצאת אילנה - שבעיקר אוהבת דברים יפים, לשפץ מנורות ורהיטים ולעצב -  וככה קניתי היום מנורת שולחן חדשה מצויינת ובמחיר מעולה.
+
+</pre>
+</div>
 <div created="20180722161146770" modified="20180722181723910" tags="[[כאן בגטו]] [[חיות אוכל]]" title="טוני וספה">
 <pre>[img[pictures/tony-vespa.jpg]]
 
@@ -14111,12 +14122,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 את המרק מגישים כשהוא חם, מקושט בעלי פטרוזילה טריים.</pre>
 </div>
-<div created="20180603160754396" modified="20180605115218224" tags="סדרות [[אחיות חוץ]]" title="משחקי הכס">
+<div created="20180603160754396" modified="20180816160752758" tags="סדרות [[אחיות חוץ]] חבר" title="משחקי הכס">
 <pre>[img[pictures/game-of-thrones.jpg]]
 
 !!![[יויו]]:
 
-חבר זה מישהו שאתה אוהב אותו, למשל [[טיריון לאניסטר|https://www.imdb.com/name/nm0227759/?ref_=tt_cl_t1]], שלא רק שהרג את אימו מעצם הוולדו, אף נולד גמד - חריג בעליל, משהו שדעת משפחתו אינה סובלת.  [[ג'יימי לאניסטר|https://www.imdb.com/name/nm0182666/?ref_=tt_cl_t7]] מתישהו כבר יודע שהוא טוב. הם כולם רוצחים במשחקי הכס, כך שזה אינו אומדן. אבל אם אתה כבר רוצח אז תעשה את זה עם סגנון כמו [[ליידי בריאן מטארת'|https://www.imdb.com/name/nm3729225/?ref_=tt_cl_t13]] או [[אריה סטארק|https://www.imdb.com/name/nm3586035/?ref_=tt_cl_t6]] שהן גם חברות טובות אם הייתי נאלץ לבחור רק שלוש כפי שהיטלתי על עצמי, כי הרשימה ארוכה וקשה לא לציין את [[סאמוול טארלי|https://www.imdb.com/name/nm4263213/?ref_=tt_cl_t10]], [[את הכלב|https://www.imdb.com/name/nm0564920/?ref_=tt_cl_t18]], את [[ברון|https://www.imdb.com/name/nm0283492/?ref_=ttfc_fc_cl_t16]], [[את הודור|https://www.imdb.com/name/nm3964231/?ref_=ttfc_fc_cl_t32]],  ואעצור כאן כי לא עומד בזה [[סידרה אהובה|https://www.imdb.com/title/tt0944947/]] [[ושחקנים אהובים|https://www.imdb.com/title/tt0944947/fullcredits?ref_=tt_cl_sm#cast]], שמבוססת על הספרים שכתב [[האיש הזה|https://www.youtube.com/watch?v=5YxeHFU8SKE]]
+[[חבר]] זה מישהו שאתה אוהב אותו, למשל [[טיריון לאניסטר|https://www.imdb.com/name/nm0227759/?ref_=tt_cl_t1]], שלא רק שהרג את אימו מעצם הוולדו, אף נולד גמד - חריג בעליל, משהו שדעת משפחתו אינה סובלת.  [[ג'יימי לאניסטר|https://www.imdb.com/name/nm0182666/?ref_=tt_cl_t7]] מתישהו כבר יודע שהוא טוב. הם כולם רוצחים במשחקי הכס, כך שזה אינו אומדן. אבל אם אתה כבר רוצח אז תעשה את זה עם סגנון כמו [[ליידי בריאן מטארת'|https://www.imdb.com/name/nm3729225/?ref_=tt_cl_t13]] או [[אריה סטארק|https://www.imdb.com/name/nm3586035/?ref_=tt_cl_t6]] שהן גם חברות טובות אם הייתי נאלץ לבחור רק שלוש כפי שהיטלתי על עצמי, כי הרשימה ארוכה וקשה לא לציין את [[סאמוול טארלי|https://www.imdb.com/name/nm4263213/?ref_=tt_cl_t10]], [[את הכלב|https://www.imdb.com/name/nm0564920/?ref_=tt_cl_t18]], את [[ברון|https://www.imdb.com/name/nm0283492/?ref_=ttfc_fc_cl_t16]], [[את הודור|https://www.imdb.com/name/nm3964231/?ref_=ttfc_fc_cl_t32]],  ואעצור כאן כי לא עומד בזה [[סידרה אהובה|https://www.imdb.com/title/tt0944947/]] [[ושחקנים אהובים|https://www.imdb.com/title/tt0944947/fullcredits?ref_=tt_cl_sm#cast]], שמבוססת על הספרים שכתב [[האיש הזה|https://www.youtube.com/watch?v=5YxeHFU8SKE]]
 </pre>
 </div>
 <div created="20170802165524913" modified="20180704184302392" tags="[[נאמני הגנזך]] בתים" title="משנים">
