--- a/index.html
+++ b/index.html
@@ -377,6 +377,8 @@ Error message and password prompt
 
 <li>אשת העסקים</li>
 
+<li>בארבי</li>
+
 <li>בבוקר</li>
 
 <li>בבית של פיני</li>
@@ -8868,8 +8870,9 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;text&quot;: &quot;file:///C:/Users/user/Desktop/coen%20sisters/pictures/alfred.jpg&quot;,
-            &quot;title&quot;: &quot;Untitled&quot;
+            &quot;title&quot;: &quot;Untitled&quot;,
+            &quot;text&quot;: &quot;https://yuvalerel.com/&quot;,
+            &quot;type&quot;: &quot;text/plain&quot;
         }
     }
 }</pre>
@@ -8989,7 +8992,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20180824163419993" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180824163422398" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180825091216819" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8998,7 +9001,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מייק לי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="בארבי [[מטא בדיון]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9218,10 +9221,12 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
 </div>
-<div created="20171004154734427" modified="20180814110740442" tags="[[אחיות חוץ]] מוזיקה חבר" title="jazz">
+<div created="20171004154734427" modified="20180825091202529" tags="[[אחיות חוץ]] מוזיקה חבר" title="jazz">
 <pre>[img[pictures/jazz.jpg]]
 
-[[jazz|https://karolina.bandcamp.com/album/karolina-with-echo-jazz-light-remixes-free-download]] היא [[יסמין לסלרוט|https://www.youtube.com/watch?v=DUX9yPz-kvo]], והיא איתן טבע. היא [[לוחמת|https://www.youtube.com/watch?v=4Th-LcHpg2w]] של שלום וחופש,  והיא [[הכי שיש|https://www.youtube.com/watch?v=7p9f8fK1VHA&amp;feature=youtu.be]] ושאפשר אהבה.
+!!![[הצוות]]:
+
+[[jazz|https://karolina.bandcamp.com/album/karolina-with-echo-jazz-light-remixes-free-download]] היא [[יסמין לסלרוט|https://www.youtube.com/watch?v=DUX9yPz-kvo]], והיא איתן טבע. היא [[לוחמת|https://www.youtube.com/watch?v=4Th-LcHpg2w]] למען שלום, שוויון וחופש,  והיא [[הכי שיש|https://www.youtube.com/watch?v=7p9f8fK1VHA&amp;feature=youtu.be]] ושאפשר אהבה.
 
 
 
@@ -10231,6 +10236,17 @@ well,
 <pre>[img[pictures/oh3SWvg2g1OAPJFl.jpg]]
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
+</div>
+<div created="20180825155311148" modified="20180826135443237" tags="מוזיקה [[כאן בגטו]] [[מטא בדיון]]" title="בארבי">
+<pre>[img[pictures/barby.jpg]]
+
+!!![[תומר]]: 
+
+בשבת לפני שבוע לקחתי מונית [[לבארבי|https://www.barby.co.il/]] לראות את [[jazz]] שהיא שכנתי האהובה, ובאמת עושר מוסיקלי היה [[בפסטיבל היפ הופ של ערב אחד|https://yuvalerel.com/2018/08/18/%d7%9e%d7%a1%d7%99%d7%91%d7%aa-%d7%94%d7%a9%d7%a7%d7%99%d7%a2%d7%94-%d7%a9%d7%9c-%d7%90%d7%9e%d7%a6%d7%a2-%d7%94%d7%9c%d7%99%d7%9c%d7%94/]]. (הקישור הזה לכתבה על הפסטיבל הכוללת גם קטעי וידאו לקוח [[מהבלוג של יובל אראל|https://yuvalerel.com/]]). ג'אז שהיא יסמין היקרה, הופיעה עם הרכב שנקרא שאזאמאט, אחלה חבורה של בחורים שמנגנים ושרים יפה וכיף. הם ניגנו איתה יפה מאד שיר שלה וקצת יותר מאוחר היא הופיעה עם השירים שלה מלווה בכוכב שי טרא ליטמן. היה מעולה.
+
+
+
+</pre>
 </div>
 <div created="20170618162529875" modified="20170706174527753" tags="[[המטבח על פי ז'נבייב]]" title="בבוקר">
 <pre>[img[pictures/genevieve-aruchat-boker.jpg]]
