--- a/index.html
+++ b/index.html
@@ -1099,6 +1099,8 @@ Error message and password prompt
 
 <li>שותה עם גורה</li>
 
+<li>שי טרא ליטמן</li>
+
 <li>שיח קפה</li>
 
 <li>שיטת אלכסנדר</li>
@@ -9001,7 +9003,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="בארבי [[מטא בדיון]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[שי טרא ליטמן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10237,12 +10239,12 @@ well,
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20180825155311148" modified="20180826135443237" tags="מוזיקה [[כאן בגטו]] [[מטא בדיון]]" title="בארבי">
+<div created="20180825155311148" modified="20180826195747737" tags="מוזיקה [[כאן בגטו]] [[מטא בדיון]]" title="בארבי">
 <pre>[img[pictures/barby.jpg]]
 
 !!![[תומר]]: 
 
-בשבת לפני שבוע לקחתי מונית [[לבארבי|https://www.barby.co.il/]] לראות את [[jazz]] שהיא שכנתי האהובה, ובאמת עושר מוסיקלי היה [[בפסטיבל היפ הופ של ערב אחד|https://yuvalerel.com/2018/08/18/%d7%9e%d7%a1%d7%99%d7%91%d7%aa-%d7%94%d7%a9%d7%a7%d7%99%d7%a2%d7%94-%d7%a9%d7%9c-%d7%90%d7%9e%d7%a6%d7%a2-%d7%94%d7%9c%d7%99%d7%9c%d7%94/]]. (הקישור הזה לכתבה על הפסטיבל הכוללת גם קטעי וידאו לקוח [[מהבלוג של יובל אראל|https://yuvalerel.com/]]). ג'אז שהיא יסמין היקרה, הופיעה עם הרכב שנקרא שאזאמאט, אחלה חבורה של בחורים שמנגנים ושרים יפה וכיף. הם ניגנו איתה יפה מאד שיר שלה וקצת יותר מאוחר היא הופיעה עם השירים שלה מלווה בכוכב שי טרא ליטמן. היה מעולה.
+בשבת לפני שבוע לקחתי מונית [[לבארבי|https://www.barby.co.il/]] לראות את [[jazz]] שהיא שכנתי האהובה, ובאמת עושר מוסיקלי היה [[בפסטיבל היפ הופ של ערב אחד|https://yuvalerel.com/2018/08/18/%d7%9e%d7%a1%d7%99%d7%91%d7%aa-%d7%94%d7%a9%d7%a7%d7%99%d7%a2%d7%94-%d7%a9%d7%9c-%d7%90%d7%9e%d7%a6%d7%a2-%d7%94%d7%9c%d7%99%d7%9c%d7%94/]]. (הקישור הזה לכתבה על הפסטיבל הכוללת גם קטעי וידאו לקוח [[מהבלוג של יובל אראל|https://yuvalerel.com/]], שאוהב ומתעד מוסיקה). ג'אז שהיא יסמין היקרה, הופיעה עם הרכב שנקרא שאזאמאט, אחלה חבורה של בחורים שמנגנים ושרים יפה וכיף. הם ניגנו איתה יפה מאד שיר שלה וקצת יותר מאוחר היא הופיעה עם השירים שלה מלווה בכוכב [[שי טרא ליטמן]]. היה מעולה.
 
 
 
@@ -16653,6 +16655,15 @@ Fapina''
 2. על כל שוט של וודקה הוספנו חצי כוס ממיץ ענבים וקרח מלוא הכוס
 
 והיה מעולה</pre>
+</div>
+<div created="20180826195804165" modified="20180828144456826" tags="[[אחיות חוץ]]" title="שי טרא ליטמן">
+<pre>
+[img[pictures/shay-tra-litman.jpg]]
+
+
+!!![[תומר]]:
+
+שי טרא ליטמן הוא [[עלם חמודות|https://www.youtube.com/watch?v=_awp-5mjewA]], הוא [[נער אומן|https://www.youtube.com/watch?v=krTGi51osmI]], הוא [[חזק בחלשותו|https://www.youtube.com/watch?v=g2VEAqm_8cU]], הוא [[כשרוני וחכם|https://www.youtube.com/watch?v=5QhE_JMvrDg]], כותב שר ומתנועע עם טיימינג מושלם, הוא [[קטלן בכריזמה|https://www.youtube.com/watch?v=J1aTFmOlYE4]], הוא שי טרא ליטמן אהוב עולם.</pre>
 </div>
 <div created="20180726193443645" modified="20180802195815980" tags="[[כאן בגטו]]" title="שיח קפה">
 <pre>[img[pictures/siach-cafe.jpg]]
