--- a/index.html
+++ b/index.html
@@ -16656,9 +16656,8 @@ Fapina''
 
 והיה מעולה</pre>
 </div>
-<div created="20180826195804165" modified="20180828144456826" tags="[[אחיות חוץ]]" title="שי טרא ליטמן">
-<pre>
-[img[pictures/shay-tra-litman.jpg]]
+<div created="20180826195804165" modified="20180828145142414" tags="[[אחיות חוץ]] מוזיקה" title="שי טרא ליטמן">
+<pre>[img[pictures/shay-tra-litman.jpg]]
 
 
 !!![[תומר]]:
