--- a/index.html
+++ b/index.html
@@ -9003,7 +9003,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[שי טרא ליטמן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="טורט [[שי טרא ליטמן]] תומר [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9023,7 +9023,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180824163413434" title="$:/temp/search">
+<div created="20161023184814872" modified="20180905110504336" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10258,7 +10258,7 @@ well,
 אם קורה שאני לא אוכלת בבוקר [[קרואסון|טורט]] כלשהו ושותה [[קפה|הספלים מהם אנו שותים]], אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
 </pre>
 </div>
-<div created="20170811181124336" modified="20180704182851284" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] בתים" title="בבית של פיני">
+<div created="20170811181124336" modified="20180831120558026" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] בתים [[חלומות שחלמנו]]" title="בבית של פיני">
 <pre>!!![[יויו]]:
 //''''
 לפני כמה ימים [[קיבלנו|האחיות כהן]] מכתב [[מדןדן|דןדן]], אחרי  שלא שמענו ממנו [[שנה בערך|דןדן נסע]]. אני כל כך  אוהב אותו ומתגעגע אליו. באישורו, אני מעתיק לכאן את המכתב:
@@ -12181,7 +12181,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <div created="20180221193850741" modified="20180316181307672" tags="הצוות" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
 <pre>[img[pictures/chavlaz.jpg]]</pre>
 </div>
-<div created="20180814103316187" modified="20180824163547903" tags="" title="חבר">
+<div created="20180814103316187" modified="20180831115944845" tags="" title="חבר">
 <pre>[img[pictures/friend.jpg]]
 
 
@@ -12189,8 +12189,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!![[יויו]]:
 
-חבר אוהב אותך למרות מה שאתה,
-חבר אוהב אותך גם כשאתה במצב, חבר אוהב אותך גם כשאתה מחופף, חבר אוהב אותך גם ביום שבת. 
+חבר אוהב אותך למרות מה שאתה, חבר אוהב אותך גם כשאתה מוצלח, חבר אוהב אותך גם כשאתה במצב, חבר אוהב אותך גם כשאתה מחופף, חבר אוהב אותך גם ביום שבת. 
 
 
 
@@ -12408,7 +12407,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * קולים פרוסות לחם בתנור עד לגוון הרצוי.
 * מרכיבים את הטוסט: מניחים פרוסה קלויה, מעליה מורחים טחינה גולמית, מעליה רסק עגבניות, מעל מניחים ירקות קלויים, גוררים פרמז'ן וזה מוכן.</pre>
 </div>
-<div created="20170624105143385" modified="20180605131500012" tags="[[חיות אוכל]] [[כשהם ישנים]] מתכונים" title="טורט">
+<div created="20170624105143385" modified="20180905110511378" tags="[[חיות אוכל]] [[כשהם ישנים]] מתכונים" title="טורט">
 <pre>[img[pictures/tort.jpg]]
 
 !!![[אווה]]:
@@ -12444,7 +12443,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 7. מוציאים מהתנור, ובעדינות בעזרת כף, מוזגים מעל העוגות החמות (מגובה נמוך) חצי כוס מיץ תפוזים. 
 
 
-********
+
+
 לפעמים אני משנה קצת. למשל מפחיתה חצי כוס קמח, ובמקומה שמה חצי כוס קוקוס, ומוסיפה לתערובת גם חופן שוקולד צ'יפס. 
  
 הבוקר שמתי קצת יותר מידי פקאנים (זה היה סוף הקופסה, אז השתמשתי בכל מה שהיה, וזה היה קצת יותר ממה שצריך). את הפקאנים ערבבתי עם מעט סוכר וקנמון טחון אותם בחשתי בקלות פנימה. אחרי האפיה במקום להרטיב עם מיץ תפוזים השתמשתי בחמש כפות סירופ מייפל.
@@ -14149,12 +14149,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 את המרק מגישים כשהוא חם, מקושט בעלי פטרוזילה טריים.</pre>
 </div>
-<div created="20180603160754396" modified="20180816160752758" tags="סדרות [[אחיות חוץ]] חבר" title="משחקי הכס">
+<div created="20180603160754396" modified="20180831115505874" tags="סדרות [[אחיות חוץ]] חבר" title="משחקי הכס">
 <pre>[img[pictures/game-of-thrones.jpg]]
 
 !!![[יויו]]:
 
-[[חבר]] זה מישהו שאתה אוהב אותו, למשל [[טיריון לאניסטר|https://www.imdb.com/name/nm0227759/?ref_=tt_cl_t1]], שלא רק שהרג את אימו מעצם הוולדו, אף נולד גמד - חריג בעליל, משהו שדעת משפחתו אינה סובלת.  [[ג'יימי לאניסטר|https://www.imdb.com/name/nm0182666/?ref_=tt_cl_t7]] מתישהו כבר יודע שהוא טוב. הם כולם רוצחים במשחקי הכס, כך שזה אינו אומדן. אבל אם אתה כבר רוצח אז תעשה את זה עם סגנון כמו [[ליידי בריאן מטארת'|https://www.imdb.com/name/nm3729225/?ref_=tt_cl_t13]] או [[אריה סטארק|https://www.imdb.com/name/nm3586035/?ref_=tt_cl_t6]] שהן גם חברות טובות אם הייתי נאלץ לבחור רק שלוש כפי שהיטלתי על עצמי, כי הרשימה ארוכה וקשה לא לציין את [[סאמוול טארלי|https://www.imdb.com/name/nm4263213/?ref_=tt_cl_t10]], [[את הכלב|https://www.imdb.com/name/nm0564920/?ref_=tt_cl_t18]], את [[ברון|https://www.imdb.com/name/nm0283492/?ref_=ttfc_fc_cl_t16]], [[את הודור|https://www.imdb.com/name/nm3964231/?ref_=ttfc_fc_cl_t32]],  ואעצור כאן כי לא עומד בזה [[סידרה אהובה|https://www.imdb.com/title/tt0944947/]] [[ושחקנים אהובים|https://www.imdb.com/title/tt0944947/fullcredits?ref_=tt_cl_sm#cast]], שמבוססת על הספרים שכתב [[האיש הזה|https://www.youtube.com/watch?v=5YxeHFU8SKE]]
+[[חבר]] זה מישהו שאתה אוהב אותו, למשל [[טיריון לאניסטר|https://www.imdb.com/name/nm0227759/?ref_=tt_cl_t1]], שלא רק שהרג את אימו מעצם הוולדו, אף נולד גמד - חריג בעליל, משהו שדעת משפחתו אינה סובלת.  [[ג'יימי לאניסטר|https://www.imdb.com/name/nm0182666/?ref_=tt_cl_t7]] מתישהו כבר יודע שהוא טוב. הם כולם רוצחים במשחקי הכס, כך שזה אינו אומדן. אבל אם אתה כבר רוצח אז תעשה את זה עם סגנון כמו [[ליידי בריאן מטארת'|https://www.imdb.com/name/nm3729225/?ref_=tt_cl_t13]] או [[אריה סטארק|https://www.imdb.com/name/nm3586035/?ref_=tt_cl_t6]] שהן גם חברות טובות. אם הייתי נאלץ לבחור רק שלוש כפי שהיטלתי על עצמי, כי הרשימה ארוכה וקשה לא לציין את [[סאמוול טארלי|https://www.imdb.com/name/nm4263213/?ref_=tt_cl_t10]], [[את הכלב|https://www.imdb.com/name/nm0564920/?ref_=tt_cl_t18]], את [[ברון|https://www.imdb.com/name/nm0283492/?ref_=ttfc_fc_cl_t16]], [[את הודור|https://www.imdb.com/name/nm3964231/?ref_=ttfc_fc_cl_t32]],  ואעצור כאן כי לא עומד בזה [[סידרה אהובה|https://www.imdb.com/title/tt0944947/]] [[ושחקנים אהובים|https://www.imdb.com/title/tt0944947/fullcredits?ref_=tt_cl_sm#cast]], שמבוססת על הספרים שכתב [[האיש הזה|https://www.youtube.com/watch?v=5YxeHFU8SKE]].
 </pre>
 </div>
 <div created="20170802165524913" modified="20180704184302392" tags="[[נאמני הגנזך]] בתים" title="משנים">
