--- a/index.html
+++ b/index.html
@@ -9003,7 +9003,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="טורט [[שי טרא ליטמן]] תומר [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אירי טוענת]] [[הגוף מתעדכן]] [[ארוחת ראש השנה]] אבקות [[עם הפנים החוצה]] גלות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9023,7 +9023,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180905110504336" title="$:/temp/search">
+<div created="20161023184814872" modified="20180905131734147" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9326,14 +9326,14 @@ well,
 
 את אבי האחד פגשתי שוב, אחרי שנים רבות שלא נפגשנו. התמונה הזו צולמה [[בנחלה|הנחלה בה גדלתי]] לפני עשרים שנה בערך.</pre>
 </div>
-<div created="20171003162348923" modified="20171005113200497" tags="[[חיות אוכל]] [[חלומות שחלמנו]]" title="אבקות">
+<div created="20171003162348923" modified="20180905133344830" tags="[[חיות אוכל]] [[חלומות שחלמנו]]" title="אבקות">
 <pre>[img[pictures/avkot.jpg]]
 
 !!![[יויו]]:
 
-אבקות הן אין אין מצב מכל כך הרבה סיבות. ראשית הן מעליבות את האינטליגנציה של בלוטות הטעם. שנית - אני סבור כי הן מפעילות אזעקות שווא אצל הקטליזטורים, בעוד לאלה אין מה באמת לפרק. שלישית הן מפוצצות מלחים, מינרלים, פוספטים, מלט וגור חתולים שהסתבך בשערו.
+אבקות הן אין אין מצב מכל כך הרבה סיבות. ראשית הן מעליבות את האינטליגנציה של בלוטות הטעם. שנית - אני סבור כי הן מפעילות אזעקות שווא אצל הקטליזטורים, בעוד לאלה אין מה באמת לפרק. שלישית הן מפוצצות מלחים, מינרלים, פוספטים, מלט [[וגור חתולים שהסתבך בשערו|יהונתן גפן]].
 
-למרות שאבקות הן אין אין מצב, אני משתמש באבקות פה ושם אבל רק כדי הצורך פחות רבע. למשל אבקת אפייה, אם תתחילו לחשוב על זה תראו שהלשון שלכם יכולה להבחין בטעמה. אם מבחינים בטעמה, סימן שיש יותר מידי. למשל אבקת סוכר. למשל אבקת פודינג - אשתמש רק בחצי ממה שכתוב. בממתיקים מלאכותיים, אני לא נוגע. אבקות מרק - לא נוגע. אבקת חלב - לא נוגע. אבקת קקאו - נוגע. אבקת שקדים - נוגע. אבקת חיטה - נוגע. 
+למרות שאבקות הן אין אין מצב, אני משתמש באבקות פה ושם אבל רק כדי הצורך פחות חצי. למשל אבקת אפייה, אם תתחילו לחשוב על זה תראו שהלשון שלכם יכולה להבחין בטעמה. אם מבחינים בטעמה, סימן שיש יותר מידי. למשל אבקת סוכר. למשל אבקת פודינג - אשתמש רק בחצי ממה שכתוב. בממתיקים מלאכותיים, אני לא נוגע. אבקות מרק - לא נוגע. אבקת חלב - לא נוגע. אבקת קקאו - נוגע. אבקת שקדים - נוגע. אבקת חיטה - נוגע. 
 
 
 אבקת ביצים? אם במקרה נפלה לכם ביצה, תנו לה להתייבש, תנו לחתול לגרד את מה שיש, וממה  שנשאר תכינו עוגת שיש.
@@ -13574,10 +13574,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 בשדה התעופה באיסלנד חיכתה לי אדל – אותה בחרתי להיות לי לאם מאמצת, דרך סוכנות בינלאומית לאימוץ בינאישי. הכל בה מצא חן בעיני ובנוסף היה לה חתול.
 </pre>
 </div>
-<div created="20180220132219849" modified="20180227145424241" tags="לילי" title="לילי 13">
+<div created="20180220132219849" modified="20180905123216951" tags="לילי [[מטא בדיון]]" title="לילי 13">
 <pre>[img[pictures/lily-13.jpg]]
 
-שתינו קפה עם נטע שחיכתה לטיסה לפריז, שם התארחה כמה ימים אצל חבר ילדות. משם היא נסעה להודו. אנחנו נסענו הבייתה.</pre>
+שתינו קפה עם נטע שחיכתה לטיסה לפריז, שם התארחה כמה ימים אצל [[חבר ילדות|יויו]]. משם היא נסעה להודו. אנחנו נסענו הבייתה.</pre>
 </div>
 <div created="20180228211946743" modified="20180704184126626" tags="לילי בתים" title="לילי 14">
 <pre>[img[pictures/lily-14.jpg]]
@@ -15111,12 +15111,12 @@ __אופן ההכנה:__
 
 </pre>
 </div>
-<div created="20170628145012336" modified="20170809210244658" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
+<div created="20170628145012336" modified="20180905132813122" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
 <pre>[img[pictures/im-hapanim-hachuza.jpg]]
 
 !!![[אירי]]:
 
-הגעתי למסקנה, שאני צריכה להיות מוכנה לרכב המואר והנחמד, שעשוי לבוא יום אחד, ולאסוף אותי מכאן. הרכב יעצור לידי, הדלת של המושב שליד הנהג, ששם נפשו בכפו, תיפתח, ואני אכנס פנימה. אני אביט בנהג, הדלת תיסגר והרכב יתחיל לעלות. אלחץ את ידו תוך שאשמע את הגלגלים נכנסים, אני בטוחה שהוא יהיה חביב מאד. החלונות יסגרו ונמשיך לעלות, וזהו, [[ניסע|https://www.youtube.com/watch?v=7zaBCbXUkeU]]. כעת אני מנסה להעריך כמה זמן אורכת נסיעה כזאת, וחושבת איזה מין תיק אני  מכינה, ואיפה הכי כדאי לי לחכות.
+הגעתי למסקנה, שאני צריכה להיות מוכנה לרכב המואר והנחמד, שעשוי לבוא יום אחד מבחוץ, ולאסוף אותי מכאן. הרכב יעצור לידי, הדלת של המושב שליד הנהג, ששם נפשו בכפו, תיפתח, ואני אכנס פנימה. אני אביט בנהג, הדלת תיסגר והרכב יתחיל לעלות. אלחץ את ידו תוך שאשמע את הגלגלים נכנסים, אני בטוחה שהוא יהיה חביב מאד. החלונות יסגרו ונמשיך לעלות, וזהו, [[ניסע|https://www.youtube.com/watch?v=7zaBCbXUkeU]]. כעת אני מנסה להעריך כמה זמן אורכת נסיעה כזאת, וחושבת איזה מין תיק אני  מכינה, ואיפה הכי כדאי לי לחכות.
 
 </pre>
 </div>
