--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@ Error message and password prompt
 
 <li>אבקות</li>
 
+<li>אברהם הוסטל</li>
+
 <li>אדית</li>
 
 <li>אהבה</li>
@@ -8991,10 +8993,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180824163419993" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20180905160804100" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20180825091216819" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180905160812462" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9003,7 +9005,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אירי טוענת]] [[הגוף מתעדכן]] [[ארוחת ראש השנה]] אבקות [[עם הפנים החוצה]] גלות [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אברהם הוסטל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9023,7 +9025,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180905131734147" title="$:/temp/search">
+<div created="20161023184814872" modified="20180912124902004" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9339,6 +9341,13 @@ well,
 אבקת ביצים? אם במקרה נפלה לכם ביצה, תנו לה להתייבש, תנו לחתול לגרד את מה שיש, וממה  שנשאר תכינו עוגת שיש.
 
 </pre>
+</div>
+<div created="20180912153229188" modified="20180912161951157" tags="[[כאן בגטו]] מוזיקה" title="אברהם הוסטל">
+<pre>[img[pictures/abraham-hostel.jpg]]
+
+!!![[תומר]]:
+
+שבועיים לפני, אשתי הנחמדת קנתה לה ולי כרטיסים להופעה של [[קותימן|https://kutiman.bandcamp.com/]] שהתקיימה בסוף יולי [[באברהם הוסטל|https://abrahamhostels.com/?gclid=EAIaIQobChMI_djYvui13QIVmKiaCh0GAAOpEAAYASAAEgISR_D_BwE]], שזה מקום שאני תמיד אוהב ללכת אליו. בשעת האמת היא הייתה עייפה מידי, ומיד הזמנתי את שכנתי האהובה, (חוטא רגע בניים דרופינג), [[יסמין|jazz]], שהופיעה שם לפני כמה חודשים עם [[שלוש|https://www.youtube.com/watch?v=ZamQEe7_hdQ]], לבוא איתי, והיא הייתה פנויה!! לקחנו מונית כי חם, והיה כיף חיים.</pre>
 </div>
 <div created="20171207164711924" modified="20171208180406611" tags="[[הנחלה בה גדלתי]]" title="אדית">
 <pre>[img[pictures/edith-cohen.jpg]]
@@ -11532,14 +11541,14 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 [[תומר]] לקח אותנו כבר בפעמים הקודמות שביקרנו את [[אבא|אבא יואל]], לאכול [[באחים|http://www.haachim.co.il/]], וברגע שנכנסנו היה ברור שמדובר [[באחיות|שאלון האחיות]]. תמיד מלא שם באנשים שנראים מאד שמחים ונהנים, אלכוהול לא יקר יחסית לרפובליקה, צוות הכי נחמד ואדיב. יש שולחנות בחוץ על המדרכה, ובחלק הפנימי,  נמצאים שולחנות מסוגים שונים, הבר של &quot;הפס הקר&quot;  ובר המשקאות, גם סביבם אפשר לשבת. יש מוסיקה כזו כאילו שנכנסת לסרט של אמיר קוסטוריצה שפגש את [[טוני סופרנו|הסופרנוס]] רק בלי הרציחות והמכות, ואז הם הלכו להיפגש עם היווני [[מהסמויה|הסמויה]] בקטע טוב, ופגשו את אריק לביא. ממש ממש טעים שם. בשרים וירקות על האש אבל לא רק, ירקות בכל מיני צורות. אני מת על החומוס שלהם ועל הפיתות, והכי על הלבנה. ביקור אצלם תמיד נותן לי השראה כשאני חוזר [[למטבח|דליקטסן]].</pre>
 </div>
-<div created="20171002200359738" modified="20180420221908730" tags="סדרות" title="האנטומיה של גריי">
+<div created="20171002200359738" modified="20180912125148988" tags="סדרות אמהות" title="האנטומיה של גריי">
 <pre>[img[pictures/greys-anatomy.jpg]]
 
 !!![[יויו]]:
 
 
-כל אחד [[פריבילגי|גבר פריבילגי]] בדרכו. ברור שאם נולדת יפה, חתיכה, אינטלגנטית, סקסית ובתה של [[דוקטור גריי המיתולוגית|https://www.imdb.com/name/nm0123632/?ref_=ttfc_fc_cl_t42]], ובאת להתמחות - אף אחד לא יהיה אמפתי לכך שהיא לא ראתה אותך ממטר.
-[[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|https://www.imdb.com/name/nm0690186/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, [[אחרי לילה סוער ומסעיר|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], עם מי שמתברר אחר כך, [[כמק דרימי|https://www.imdb.com/name/nm0001131/?ref_=tt_cl_t5]] - מנתח המוח החתיך, שייהרג בסוף עונה 11 במשך פרק שלם. השיחות האינטימיות ביותר קורות מעל פציינטים מורדמים, עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת להראות את מורכבות ההיררכיה האנושית, לתת בראש כשצריך, ותמיד לרגש.</pre>
+כל אחד [[פריבילגי|גבר פריבילגי]] בדרכו. ברור שאם נולדת לבנה, יפה, חתיכה, אינטלגנטית, סקסית ובתה של [[דוקטור גריי המיתולוגית|https://www.imdb.com/name/nm0123632/?ref_=ttfc_fc_cl_t42]], ובאת להתמחות - אף אחד לא יהיה אמפתי לכך שהיא לא ראתה אותך ממטר.
+[[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|https://www.imdb.com/name/nm0690186/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, [[אחרי לילה סוער ומסעיר|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], עם מי שמתברר אחר כך, [[כמק דרימי|https://www.imdb.com/name/nm0001131/?ref_=tt_cl_t5]] - מנתח המוח החתיך, שייהרג בסוף עונה 11 לאורך פרק שלם. השיחות האינטימיות ביותר קורות מעל פציינטים מורדמים, עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת להראות את מורכבות ההיררכיה האנושית, לתת בראש כשצריך, ותמיד לרגש.</pre>
 </div>
 <div created="20170504162635914" modified="20170817163640560" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
@@ -12551,12 +12560,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <pre>[img[pictures/tethys-sea.jpg]]
 מאגר גז שכל התפוקה העתידית שלו נמכרה לגורם שמעדיף להישאר בעילום שם תמורת הזכות לפתח את [[מרינה זוטו]] ו[[געזונטהייטס]] בתור נכסי [[דיור מוגז]].</pre>
 </div>
-<div created="20171210203415794" modified="20180605151848521" tags="[[קופים ממונעים]]" title="יסודי או ocd">
+<div created="20171210203415794" modified="20180912125302046" tags="[[קופים ממונעים]]" title="יסודי או ocd">
 <pre>[img[pictures/spiritual-level.jpg]]
 
 !!![[יויו]]:
 
-לפעמים אני שואל את עצמי, האם יש לך [[פלס|https://he.wikipedia.org/wiki/%D7%A4%D7%9C%D7%A1_%D7%91%D7%A0%D7%90%D7%99%D7%9D]] במקום של [[העין השלישית|https://he.wikipedia.org/wiki/%D7%94%D7%A2%D7%99%D7%9F_%D7%94%D7%A9%D7%9C%D7%99%D7%A9%D7%99%D7%AA]] או שזו [[הפרעה כפייתית טורדנית?|https://he.wikipedia.org/wiki/%D7%94%D7%A4%D7%A8%D7%A2%D7%94_%D7%98%D7%95%D7%A8%D7%93%D7%A0%D7%99%D7%AA-%D7%9B%D7%A4%D7%99%D7%99%D7%AA%D7%99%D7%AA]] זה לא רק שאני צריך ליישר כל דבר כל הזמן, ושהדברים יהיו בזווית שאני רוצה. אני כמעט כל הזמן מתכנן, אני כמעט כל הזמן [[מזנפלץ|מיזונפלציה]], אני מוטרד מדברים שאמרתי או לא אמרתי. קו דק עובר בין פרפקציוניזם ל-ocd.</pre>
+לפעמים אני שואל את עצמי, האם יש לך [[פלס|https://he.wikipedia.org/wiki/%D7%A4%D7%9C%D7%A1_%D7%91%D7%A0%D7%90%D7%99%D7%9D]] במקום של [[העין השלישית|https://he.wikipedia.org/wiki/%D7%94%D7%A2%D7%99%D7%9F_%D7%94%D7%A9%D7%9C%D7%99%D7%A9%D7%99%D7%AA]] או שזו [[הפרעה כפייתית טורדנית?|https://he.wikipedia.org/wiki/%D7%94%D7%A4%D7%A8%D7%A2%D7%94_%D7%98%D7%95%D7%A8%D7%93%D7%A0%D7%99%D7%AA-%D7%9B%D7%A4%D7%99%D7%99%D7%AA%D7%99%D7%AA]] זה לא רק שאני צריך ליישר כל דבר כל הזמן, ושהדברים יהיו בזווית שאני רוצה. אני כמעט כל הזמן מתכנן, אני כמעט כל הזמן [[מזנפלץ|מיזונפלציה]], אני מוטרד מדברים שאמרתי או לא אמרתי. קו דק עובר בין פרפקציוניזם ל-ocd, ולאחרונה גיליתי שיש דבר כזה שנקרא legit ocd ומה רבה שמחתי.</pre>
 </div>
 <div created="20170422205250692" modified="20180605132756716" tags="[[המטבח על פי ז'נבייב]] [[מתכונים טבעוניים]] מתכונים" title="ירקות קלויים">
 <pre>[img[pictures/yerakot-klooim.jpg]]
