--- a/english.html
+++ b/english.html
@@ -7956,8 +7956,7 @@ Error message and password prompt
 }</pre>
 </div>
 <div created="20170730181458093" modified="20170731000432117" tags="$:/tags/ViewTemplate" title="$:/core/ui/ViewTemplate/body">
-<pre>\define tootlink() [[🍓|https://swatwt.com/sistertoots/#en::$(currentTiddler)$]]
-\define heblink(term:&quot;לא ידוע&quot;) &lt;a target=&quot;_blank&quot; class=&quot;translation&quot; href=&quot;http://coensisters.org#$term$&quot;&gt;עברית&lt;/a&gt;
+<pre>\define heblink(term:&quot;לא ידוע&quot;) &lt;a target=&quot;_blank&quot; class=&quot;translation&quot; href=&quot;http://coensisters.org#$term$&quot;&gt;עברית&lt;/a&gt;
 &lt;$reveal tag=&quot;div&quot; class=&quot;tc-tiddler-body&quot; type=&quot;nomatch&quot; state=&lt;&lt;folded-state&gt;&gt; text=&quot;hide&quot; retain=&quot;yes&quot; animate=&quot;yes&quot;&gt;
 
 &lt;$list filter=&quot;[all[current]!has[plugin-type]!field:hide-body[yes]]&quot;&gt;
@@ -7969,8 +7968,6 @@ Error message and password prompt
 &lt;/$transclude&gt;
 
 &lt;/$list&gt;
-
-&lt;div class=&quot;tootdiv&quot;&gt;&lt;&lt;tootlink&gt;&gt;&lt;/div&gt;
 
 &lt;/$reveal&gt;
 </pre>
