--- a/index.html
+++ b/index.html
@@ -603,6 +603,8 @@ Error message and password prompt
 
 <li>ז'נבייב</li>
 
+<li>זמירות חג</li>
+
 <li>זקופי הגו</li>
 
 <li>חבל&quot;ז שוכ&quot;ו ק&quot;ר</li>
@@ -8848,7 +8850,7 @@ Error message and password prompt
 }</pre>
 </div>
 <div created="20170730181458093" modified="20170731000432117" tags="$:/tags/ViewTemplate" title="$:/core/ui/ViewTemplate/body">
-<pre>\define tootlink() [[🍓|https://swatwt.com/sistertoots/#$(currentTiddler)$]]
+<pre>\define englink(term:&quot;לא ידוע&quot;) &lt;a target=&quot;_blank&quot; class=&quot;translation&quot; href=&quot;http://coensisters.org/english.html#$term$&quot;&gt;English&lt;/a&gt;
 
 &lt;$reveal tag=&quot;div&quot; class=&quot;tc-tiddler-body&quot; type=&quot;nomatch&quot; state=&lt;&lt;folded-state&gt;&gt; text=&quot;hide&quot; retain=&quot;yes&quot; animate=&quot;yes&quot;&gt;
 
@@ -9005,7 +9007,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אברהם הוסטל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[זמירות חג]] תומר [[כאן בגטו]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9025,7 +9027,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180912124902004" title="$:/temp/search">
+<div created="20161023184814872" modified="20180926130610273" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9162,6 +9164,8 @@ Error message and password prompt
 <pre>.left { text-align: left }
 .center { text-align: center }
 .right { text-align: right }
+a.translation { display: inline; text-decoration: none; color: #fff; background-color: #007; border-radius: 1em; padding: 0 0.5em }
+a.translation:hover { text-decoration: underline }
 .ltr { direction: ltr }
 .rtl,
 .tc-edit-texteditor,
@@ -12177,6 +12181,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא חתולה יפה שמשפחתה היגרה ממרוקו [[לפריז|בבוקר]].
 
 היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת [[שהכל במקום|ההיררכיה במקרר]]. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].</pre>
+</div>
+<div created="20180927093957805" modified="20180927114648266" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[מטא בדיון]]" title="זמירות חג">
+<pre>[img[pictures/zemirot-chag.jpg]]
+
+!!![[תומר]]:
+
+חוהמ&quot;ס התשע&quot;ט, שעות אחר הצהריים, שפי נסעה עם ננו התינוקת המתוקה שלנו, ואני אמור להסתלבט וגם לעבוד, אבל אני יושב כמו אידיוט ושומע את נשיא ארה&quot;ב אומר דברים בעוד רוה&quot;מ שלנו יושב לידו ועף על החיים. לפתע קול שירת זמירות חג עולה מהסוכה שבחצר הבניין הסמוך, ומציל אותי. אני מחייך. קם. מציץ דרך התריס. נהנה. מצלם, ושולח [[לגורה|גורה]].</pre>
 </div>
 <div created="20170527175706471" modified="20170605214948712" tags="[[אירי טוענת]]" title="זקופי הגו">
 <pre>[img[pictures/zkufey-hagev.jpg]]
