--- a/index.html
+++ b/index.html
@@ -415,6 +415,8 @@ Error message and password prompt
 
 <li>ג'יימס גנדולפיני</li>
 
+<li>ג'יין פונדה</li>
+
 <li>ג'ף ברידג'ס</li>
 
 <li>גבר פריבילגי</li>
@@ -9009,7 +9011,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="כביסה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ג'יין פונדה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9029,7 +9031,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181001151714083" title="$:/temp/search">
+<div created="20161023184814872" modified="20181003131827289" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10523,6 +10525,22 @@ Is where I want to be
 [[ג'יימס גנדולפיני|http://www.imdb.com/name/nm0001254/]] האהוב, שנתן את כל כולו.
 
 </pre>
+</div>
+<div created="20181003131016162" modified="20181003144444849" tags="[[האחיות בלות]] [[אחיות חוץ]]" title="ג'יין פונדה">
+<pre>[img[pictures/jane-fonda.jpg]]
+
+!!![[אווה]]:
+
+
+
+השבוע הזמנתי את הבנות אלי לצפות [[בסרט הדוקומנטרי|https://www.imdb.com/title/tt7689958/]] המרתק בחמש מערכות על [[ג'יין פונדה|https://www.imdb.com/name/nm0000404/]] הנהדרת. עשיתי את זה אחרי שסוניה המתוקתקת אמרה שהיא חושבת להזריק קצת פה ושם.
+
+בחלק החמישי של הסרט (שעה ו54 דקות מתחילתו) אומרת ג'יין:
+
+//אני שמחה שאני נראית טוב לגילי, אבל גם עברתי ניתוחים פלסטיים, אני לא אשקר באשר לכך. מצד אחד אני שונאת את העובדה שהייתי צריכה לשנות את עצמי פיזית כדי להרגיש שאני בסדר, הלואי ולא הייתי כזו. אני אוהבת פנים מבוגרים, אוהבת את הפנים של ונסה רדגרייב, הלואי והייתי אמיצה יותר, אך אני מי שאני.//
+
+
+[[מהתמונה הזו|https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTU1MTA5MjA5NjczODM1ODg2/photo-by-tibrina-hobson-getty-images-square.jpg]] ציירה גורה את ג'יין.</pre>
 </div>
 <div created="20171212163308820" modified="20171216175004697" tags="[[אחיות חוץ]]" title="ג'ף ברידג'ס">
 <pre>[img[pictures/jeff-bridges.jpg]]
