לא חברמניות ותיקונים

--- a/index.html
+++ b/index.html
@@ -763,6 +763,8 @@ Error message and password prompt
 
 <li>כתב התנועה אשכול-וכמן</li>
 
+<li>לא חברמניות</li>
+
 <li>להרוג את איב</li>
 
 <li>להתרועע עם האחות ב. כהן</li>
@@ -9011,7 +9013,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ג'יין פונדה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ג'יין פונדה]] [[לא חברמניות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10526,14 +10528,14 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20181003131016162" modified="20181003144444849" tags="[[האחיות בלות]] [[אחיות חוץ]]" title="ג'יין פונדה">
+<div created="20181003131016162" modified="20181004083319203" tags="[[האחיות בלות]] [[אחיות חוץ]]" title="ג'יין פונדה">
 <pre>[img[pictures/jane-fonda.jpg]]
 
 !!![[אווה]]:
 
 
 
-השבוע הזמנתי את הבנות אלי לצפות [[בסרט הדוקומנטרי|https://www.imdb.com/title/tt7689958/]] המרתק בחמש מערכות על [[ג'יין פונדה|https://www.imdb.com/name/nm0000404/]] הנהדרת. עשיתי את זה אחרי שסוניה המתוקתקת אמרה שהיא חושבת להזריק קצת פה ושם.
+השבוע הזמנתי את הבנות אלי לצפות [[בסרט הדוקומנטרי|https://www.imdb.com/title/tt7689958/]] המרתק בחמש מערכות על [[ג'יין פונדה|https://www.imdb.com/name/nm0000404/]] - האישה עם הניצוץ בעיניים. עשיתי את זה אחרי שסוניה [[המתוקתקת|לא חברמניות]] אמרה שהיא חושבת להזריק קצת פה ושם.
 
 בחלק החמישי של הסרט (שעה ו54 דקות מתחילתו) אומרת ג'יין:
 
@@ -13398,6 +13400,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[אירי]]:
 
 [[זו|http://www.habama.co.il/Upload/MediaFiles/%D7%A0%D7%A2%D7%94%20%D7%90%D7%A9%D7%9B%D7%95%D7%9C%20%D7%91%D7%99%D7%92.bmp]] התמונה ממנה גורה ציירה את הציור, בו רואים את להקת &quot;ריקודי חדר&quot; של  [[נעה אשכול|https://he.wikipedia.org/wiki/%D7%A0%D7%95%D7%A2%D7%94_%D7%90%D7%A9%D7%9B%D7%95%D7%9C]], שהייתה למעשה אומנית חוקרת תנועה, ויצרה עם תלמידה [[אברהם וכמן|https://he.wikipedia.org/wiki/%D7%90%D7%91%D7%A8%D7%94%D7%9D_%D7%95%D7%9B%D7%9E%D7%9F]] את [[כתב התנועה אשכול- וכמן|https://he.wikipedia.org/wiki/%D7%9B%D7%AA%D7%91_%D7%94%D7%AA%D7%A0%D7%95%D7%A2%D7%94_%D7%90%D7%A9%D7%9B%D7%95%D7%9C-%D7%95%D7%9B%D7%9E%D7%9F]]. את  האטיודים שנובעים מהכתב מבצעים גם היום לקול מטרונום [[חברי הלהקה|https://www.youtube.com/watch?v=-C1tJdlXRRg]], שעבדו עימה לאורך שנים ארוכות בביתה בחולון, שם גם יצרה משאריות בדים [[שטיחי קיר|http://www.hetzroni.com/noa-rugs/noa_rugs.php]] מלאי כיוונים. הבית הלהקה והכתב [[ממשיכים|http://noaeshkol.org/]] ואני מעריצה את [[רחלי נול כהנא|http://info.smkb.ac.il/home/home.exe/45079/65721]]
+
+</pre>
+</div>
+<div created="20181004083402083" modified="20181004091908320" tags="[[האחיות בלות]]" title="לא חברמניות">
+<pre>[img[pictures/lo-hevremaniyot.jpg]]
+
+!!![[אווה]]:
+
+נשגב מבינתי איך [[סוניה]] תמיד מטופחת למשעי  כולל ציפורניים, תוך כדי שהיא אופה, מבשלת ובלבוסטה לעילא על בסיס יומי. יחד עם זה, גם היא, כמו [[ז'נבייב]] וכמוני, לא חברמנית. המקסימום שלנו זה [[גני לוקסמבורג|https://he.wikipedia.org/wiki/%D7%92%D7%A0%D7%99_%D7%9C%D7%95%D7%A7%D7%A1%D7%9E%D7%91%D7%95%D7%A8%D7%92]]. מעולם לא קפצנו משמחה לארגן ציידנית מלאה כל טוב לקראת יציאה לים, אנחנו לא מעוניינות לישון באוהל או בטבע, אנחנו לא אוהבות חול בסנדלים או לדלג על מקלחת. עשינו דברים כאלה בעבר, כשהילדים עוד היו קטנים, והיום אנו מיטיבות לכת בשביל חנויות האופנה, שבסופו בית קפה.
 
 </pre>
 </div>
