--- a/index.html
+++ b/index.html
@@ -467,6 +467,8 @@ Error message and password prompt
 
 <li>גלי זחל</li>
 
+<li>גלסי</li>
+
 <li>גן-יה</li>
 
 <li>געזונטהייטס</li>
@@ -9013,7 +9015,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ג'יין פונדה]] [[לא חברמניות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="גלסי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9033,7 +9035,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181003131827289" title="$:/temp/search">
+<div created="20161023184814872" modified="20181005143353668" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11232,6 +11234,13 @@ Is where I want to be
 !!![[גורה]]:
 
 אחת מתוך שתי תחנות רדיו מקומיות של [[מצפה ראשית]], שנמצאת [[בחנות הדיסקים|חנות דיסקים]].</pre>
+</div>
+<div created="20181005175015650" modified="20181005185337906" tags="[[כאן בגטו]]" title="גלסי">
+<pre>[img[pictures/galsi.jpg]]
+
+!!![[תומר]]:
+
+צריך מסמך? צריך לשלוח פקס? צריך כרטיסי ביקור? צריך לסרוק? צריך עיפרון? בדרך  לכל מקום  עוצרים [[בגלסי|http://www.galsi.co.il/]].</pre>
 </div>
 <div created="20161205195559773" modified="20180401155428784" title="גן-יה">
 <pre>[img[pictures/gan-ya.jpg]]
