--- a/index.html
+++ b/index.html
@@ -647,6 +647,8 @@ Error message and password prompt
 
 <li>טורט</li>
 
+<li>טלפון חכם</li>
+
 <li>יד ימין אינה יודעת</li>
 
 <li>יה</li>
@@ -9003,10 +9005,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180905160804100" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20181006131603707" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180905160812462" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181006131605810" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9015,7 +9017,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="גלסי [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[טלפון חכם]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12501,6 +12503,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 הבוקר שמתי קצת יותר מידי פקאנים (זה היה סוף הקופסה, אז השתמשתי בכל מה שהיה, וזה היה קצת יותר ממה שצריך). את הפקאנים ערבבתי עם מעט סוכר וקנמון טחון אותם בחשתי בקלות פנימה. אחרי האפיה במקום להרטיב עם מיץ תפוזים השתמשתי בחמש כפות סירופ מייפל.
 
 </pre>
+</div>
+<div created="20181006124035047" modified="20181006132141881" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]] [[מטא בדיון]]" title="טלפון חכם">
+<pre>
+[img[pictures/smart-phone.jpg]]
+
+!!![[ג'ונג]]:
+
+באופן יזום ומכוון לא [[איזכרנו|אחות כהן]] את קיומם של [[המכשירים המחופשים לטלפון|https://he.wikipedia.org/wiki/%D7%98%D7%9C%D7%A4%D7%95%D7%9F_%D7%97%D7%9B%D7%9D]] כאן בגנזך עד עכשיו, למרות שלכולנו יש איזה אחד. אני יושב ומחכה רגוע למטרו הבוקר, עד שהחכם ממליץ לי על סידרת תמונות  מבדיוק לפני שנה. הוא חושב שהן יתאימו לי לאלבום ולי הולך הראש. זו הייתה סדרת תמונות שחשבתי שמחקתי - ובאמת מחקתי רק לא מהבפנים. בתמונות רואים את נטלי, [[שהלכה ממני|https://www.youtube.com/watch?v=1dXEzMcfCyA]] לפני שלושה חודשים, ואותי, מאוהבים. </pre>
 </div>
 <div created="20170514194133105" modified="20180316181438223" tags="[[בחוות החיות]] [[שרלה לא הייתה אוהבת את זה]]" title="יד ימין אינה יודעת">
 <pre>[img[pictures/yad-yamin.jpg]]
