--- a/index.html
+++ b/index.html
@@ -9005,10 +9005,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20181006131603707" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20181006133725259" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20181006131605810" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181006134134830" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9017,7 +9017,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[טלפון חכם]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מתכוני ארוחת הכריסמס]] [[מה שבאמת קרה בארוחת כריסמס]] [[כריסמס 2017]] [[ארוחת כריסמס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9037,7 +9037,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181005143353668" title="$:/temp/search">
+<div created="20161023184814872" modified="20181006150147371" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10197,7 +10197,7 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[ארוחות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161112191527440" modified="20180201143140926" tags="[[חיות אוכל]] ארוחות" title="ארוחת כריסמס">
+<div created="20161112191527440" modified="20181006145754220" tags="[[חיות אוכל]] ארוחות" title="ארוחת כריסמס">
 <pre>[img[pictures/aruchat-christmas.jpg]]
 
 
@@ -11237,12 +11237,12 @@ Is where I want to be
 
 אחת מתוך שתי תחנות רדיו מקומיות של [[מצפה ראשית]], שנמצאת [[בחנות הדיסקים|חנות דיסקים]].</pre>
 </div>
-<div created="20181005175015650" modified="20181005185337906" tags="[[כאן בגטו]]" title="גלסי">
+<div created="20181005175015650" modified="20181006132635674" tags="[[כאן בגטו]]" title="גלסי">
 <pre>[img[pictures/galsi.jpg]]
 
 !!![[תומר]]:
 
-צריך מסמך? צריך לשלוח פקס? צריך כרטיסי ביקור? צריך לסרוק? צריך עיפרון? בדרך  לכל מקום  עוצרים [[בגלסי|http://www.galsi.co.il/]].</pre>
+צריך [[מסמך|https://www.youtube.com/watch?v=NNC0kIzM1Fo]]? צריך לשלוח פקס? צריך כרטיסי ביקור? צריך לסרוק? צריך עיפרון? בדרך  לכל מקום  עוצרים [[בגלסי|http://www.galsi.co.il/]].</pre>
 </div>
 <div created="20161205195559773" modified="20180401155428784" title="גן-יה">
 <pre>[img[pictures/gan-ya.jpg]]
@@ -12505,8 +12505,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20181006124035047" modified="20181006132141881" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]] [[מטא בדיון]]" title="טלפון חכם">
-<pre>
-[img[pictures/smart-phone.jpg]]
+<pre>[img[pictures/smart-phone.jpg]]
 
 !!![[ג'ונג]]:
 
@@ -14278,7 +14277,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, משתדלים לא להגזים עם חופש הביטוי.</pre>
 </div>
-<div created="20161114205035106" modified="20180604194147245" tags="ארוחות [[חיות אוכל]] מתכונים" title="מתכוני ארוחת הכריסמס">
+<div created="20161114205035106" modified="20181006145935078" tags="ארוחות [[חיות אוכל]] מתכונים" title="מתכוני ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
