--- a/index.html
+++ b/index.html
@@ -529,6 +529,8 @@ Error message and password prompt
 
 <li>הדוד האמיתי</li>
 
+<li>הדשא של השכן</li>
+
 <li>ההוסטל</li>
 
 <li>ההיררכיה במקרר</li>
@@ -9017,7 +9019,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מתכוני ארוחת הכריסמס]] [[מה שבאמת קרה בארוחת כריסמס]] [[כריסמס 2017]] [[ארוחת כריסמס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הדשא של השכן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9037,7 +9039,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181006150147371" title="$:/temp/search">
+<div created="20161023184814872" modified="20181008190346681" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11237,12 +11239,12 @@ Is where I want to be
 
 אחת מתוך שתי תחנות רדיו מקומיות של [[מצפה ראשית]], שנמצאת [[בחנות הדיסקים|חנות דיסקים]].</pre>
 </div>
-<div created="20181005175015650" modified="20181006132635674" tags="[[כאן בגטו]]" title="גלסי">
+<div created="20181005175015650" modified="20181008184446940" tags="[[כאן בגטו]]" title="גלסי">
 <pre>[img[pictures/galsi.jpg]]
 
 !!![[תומר]]:
 
-צריך [[מסמך|https://www.youtube.com/watch?v=NNC0kIzM1Fo]]? צריך לשלוח פקס? צריך כרטיסי ביקור? צריך לסרוק? צריך עיפרון? בדרך  לכל מקום  עוצרים [[בגלסי|http://www.galsi.co.il/]].</pre>
+צריך מסמך? צריך לשלוח פקס? צריך כרטיסי ביקור? צריך לסרוק? צריך עיפרון? בדרך  לכל מקום  עוצרים [[בגלסי|http://www.galsi.co.il/]].</pre>
 </div>
 <div created="20161205195559773" modified="20180401155428784" title="גן-יה">
 <pre>[img[pictures/gan-ya.jpg]]
@@ -11646,6 +11648,13 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 כש[[הדוד|https://thedod.github.io#עברית]], שכדאי מאד להקשיב למה שיש לו להגיד, הגיע אלינו, די מהר, הכל התחיל להסתדר במקום. 
 
 </pre>
+</div>
+<div created="20181012081908424" modified="20181012111444202" tags="בתים [[משפחת באומן]] [[מטא בדיון]]" title="הדשא של השכן">
+<pre>[img[pictures/hadeshe-shel-hashachen.jpg]]
+
+!!![[גורה]]:
+
+בפעם האחרונה שביקרנו את אבא הצטערתי לראות את [[הדשא של השכן|https://www.youtube.com/watch?v=SPg4IwGZMvM]].</pre>
 </div>
 <div created="20170320180743138" modified="20180704183551600" tags="HH" title="ההוסטל">
 <pre>[img[pictures/A0kTw651K5Nv7O5O.jpg]]
@@ -16785,7 +16794,7 @@ Fapina''
 הוא טוב מראה, טוב לב, חביב על הבריות, חסר חוש עסקי, בעל חוש אומנותי ואף יוצר בעצמו, חובב נשים (אך לא רודף שמלות).
 שלום גר בקומה חמש בבניין, ובקומה מעליו הוא חולק סטודיו עם מסאז'יסטית ואומנית נוספת.</pre>
 </div>
-<div created="20180325202247142" modified="20180930163700847" tags="[[אחיות חוץ]] מוזיקה" title="שלום חנוך">
+<div created="20180325202247142" modified="20181008190343383" tags="[[אחיות חוץ]] מוזיקה" title="שלום חנוך">
 <pre>[img[pictures/shalom-chanoch.jpg]]
 
 !!![[יויו]]:
@@ -16811,7 +16820,9 @@ Fapina''
 
 [[אני לא יודע איך לומר לך|https://www.youtube.com/watch?v=oq-wSaSh-Do]]
 
-[[את מביאה הכל|https://www.youtube.com/watch?v=JSYt63blLJ0]]    
+[[את מביאה הכל|https://www.youtube.com/watch?v=JSYt63blLJ0]]  
+
+(  //אין לעולם דבר פשוט, אי שם בדרך מחכה טעות// )
 
 [[בגלגול הזה|https://www.youtube.com/watch?v=KS25hjyFC9c]]
 
