לחם והדשא של השכן

--- a/index.html
+++ b/index.html
@@ -781,6 +781,8 @@ Error message and password prompt
 
 <li>לזניה צמחונית</li>
 
+<li>לחם</li>
+
 <li>לחמים</li>
 
 <li>לייף סטייל</li>
@@ -9019,7 +9021,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הדשא של השכן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="לחם [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13540,6 +13542,40 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 9. אופים במשך כ-40 דקות, עד שהלזניה משחימה
 
 10. מקררים כעשרים דקות, חותכים ומגישים
+
+</pre>
+</div>
+<div created="20181014115132718" modified="20181014160157265" tags="[[חיות אוכל]]" title="לחם">
+<pre>[img[pictures/lechem.jpg]]
+
+
+!!![[יויו]]:
+
+
+אני בנאדם של לחם, לא מתחייב לסוג. פיתה, בגט, מלא, שום, ג'בטה, פוקצ'ה, פריקסה, גרעינים, לחמניות, רכות, פרנץ' טוסט, בריוש, לטבול בעגבניה, או עם חמאה וריבה, או שוקולד, au raisin. הקטע הבא הוא קטע מספר נפלא:
+
+
+
+//&quot;זה הלחם שלך, גברת מק'גיל?&quot; שאל. //
+
+//&quot;כן&quot;, אמרתי, &quot;חישבתי אתמול שאפיתי יותר מארבע מאות כיכרות בשנה בחמש עשרה השנים האחרונות. זה יותר מששת אלפים כיכרות לחם. אפשר לכתוב על המצבה שלי.&quot;//
+
+
+//&quot;אמנות אפיית הלחם היא מיסתורין נשגב כמו אמנות יצירת הסונטות,&quot; אמר אדום הזקן, &quot;והלחמניות החמות שלך - אפשר לראות בהן שירים ליריים קצרים, אולי טריולטים. זו חתיכת אנתולוגיה, או מזמור, אם את מעדיפה.&quot;// 
+
+
+([[פרנסוס על גלגלים|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%A0%D7%A1%D7%95%D7%A1_%D7%A2%D7%9C_%D7%92%D7%9C%D7%92%D7%9C%D7%99%D7%9D]]/ כריסטופר מורלי, עמודים 75-76, בתרגום יהונתן דיין, הוצאת זיקית  2012)
+
+
+
+
+
+
+
+
+
+
+
 
 </pre>
 </div>
